Fixed z-index that clashed with plyr

--- a/src/css/5-components/_hamburger.css
+++ b/src/css/5-components/_hamburger.css
@@ -1,6 +1,6 @@
 .hamburger {
   position: relative;
-  z-index: 3;
+  z-index: 10;
   padding: $hamburger-padding-y $hamburger-padding-x;
   float: right;
   cursor: pointer;
