--- a/src/css/5-components/_header.css
+++ b/src/css/5-components/_header.css
@@ -1,7 +1,7 @@
 .header {
   height: $header-height;
   position: fixed;
-  z-index: 1;
+  z-index: 8;
   top: 0;
   left: 0;
   right: 0;
