--- a/src/css/5-components/_logo.css
+++ b/src/css/5-components/_logo.css
@@ -1,6 +1,6 @@
 .logo {
   position: relative;
-  z-index: 3;
+  z-index: 10;
   display: inline-block;
   transition: opacity $fast ease;
 
