--- a/src/css/5-components/_menu-wrapper.css
+++ b/src/css/5-components/_menu-wrapper.css
@@ -9,7 +9,7 @@
     &__nav {
       background-color: white;
       position: fixed;
-      z-index: 2;
+      z-index: 9;
       top: 0;
       right: 0;
       bottom: 0;
